--- a/app/src/main/res/layout/activity_add_monument.xml
+++ b/app/src/main/res/layout/activity_add_monument.xml
@@ -14,19 +14,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/etName"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
         android:hint="@string/name"
-        android:layout_marginBottom="15dp" />
+        android:layout_below="@+id/ivAddMon"
+        android:layout_alignParentStart="true"
+        android:lines="1"
+        android:maxLines="1" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/etType"
+        android:hint="@string/type"
         android:layout_below="@+id/etName"
         android:layout_alignParentStart="true"
-        android:hint="@string/type"
-        android:layout_marginBottom="15dp" />
+        android:lines="1"
+        android:maxLines="1" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -38,19 +40,21 @@
         android:layout_alignParentStart="true"
         android:layout_alignEnd="@+id/etType"
         android:hint="@string/description"
-        android:layout_marginBottom="15dp" />
+        android:layout_marginBottom="15dp"
+        android:maxLines="5" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/upolad_image"
-        android:id="@+id/btnUpload"
+        android:text="@string/take_picture"
+        android:id="@+id/btnTakePicture"
         android:background="#5868be"
         android:textColor="#ffffff"
         android:clickable="false"
         android:minWidth="200dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="takePictureHandler" />
 
     <Button
         android:layout_width="wrap_content"
@@ -64,4 +68,18 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:onClick="AddHandler" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ivAddMon"
+        android:maxHeight="200dp"
+        android:maxWidth="200dp"
+        android:minHeight="200dp"
+        android:minWidth="200dp"
+        android:onClick="takePictureHandler"
+        android:background="#ffffff"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
